# django-input-mask

./: .gitignore  .travis.yml  AUTHORS.rst  HISTORY.rst  README.rst  runtests.py  setup.cfg  setup.py  tox.ini
example_project/example_project/: forms.py  settings.py  urls.py  views.py  wsgi.py
example_project/example_project/templates/: form.html
input_mask/: fields.py  utils.py  widgets.py
input_mask/contrib/localflavor/br/: fields.py  widgets.py
input_mask/contrib/localflavor/us/: fields.py  widgets.py
input_mask/static/input_mask/js/datepicker/: init_datepicker.js
requirements/: requirements-testing.txt
tests/: conftest.py  test_input_mask.py
