[metadata]
license-file = LICENSE

[wheel]
universal = 1

[tool:pytest]
addopts=--tb=short --strict
testspath = tests

[flake8]
ignore = E501

[isort]
skip=.tox
atomic=true
multi_line_output=5
known_standard_library=types
known_third_party=pytest,_pytest,django
known_first_party=input_mask


[coverage:run]
# NOTE: source is ignored with pytest-cov (but uses the same).
source = .
include = input_mask/*,tests/*
branch = 1

[coverage:report]
include = input_mask/*,tests/*
exclude_lines =
    pragma: no cover
    raise NotImplementedError